分佈式事務，異步補償
