# sdk-contract/sdk-exchange/sdk-exchange-auth/sdk-service-exchange-auth-rest-api/src/main/java/open/vincentf13/exchange/auth/api/dto/AuthCredentialPrepareResponse.java
@@ -1,0 +1,6 @@
+package open.vincentf13.exchange.auth.api.dto;
+
+public record AuthCredentialPrepareResponse(
+        String secretHash,
+        String salt
+) { }
